// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteTreeBuilder routeTreeFromPaths Should create a route tree 1`] = `
Array [
  Object {
    "component": null,
    "path": "/tag",
  },
  Object {
    "component": null,
    "path": "/beat",
    "routes": Array [
      Object {
        "component": null,
        "path": "/beat/detail",
      },
      Object {
        "component": null,
        "path": "/beat/tags",
      },
    ],
  },
  Object {
    "component": null,
    "path": "/error/enforce_security",
  },
  Object {
    "component": null,
    "path": "/error/invalid_license",
  },
  Object {
    "component": null,
    "path": "/error/no_access",
  },
  Object {
    "component": null,
    "path": "/overview",
    "routes": Array [
      Object {
        "component": null,
        "path": "/overview/enrolled_beats",
      },
      Object {
        "component": null,
        "path": "/overview/tag_configurations",
      },
    ],
  },
  Object {
    "component": null,
    "path": "/walkthrough/initial",
    "routes": Array [
      Object {
        "component": null,
        "path": "/walkthrough/initial/beat",
      },
      Object {
        "component": null,
        "path": "/walkthrough/initial/finish",
      },
      Object {
        "component": null,
        "path": "/walkthrough/initial/tag",
      },
    ],
  },
  Object {
    "component": null,
    "path": "*",
  },
]
`;

exports[`RouteTreeBuilder routeTreeFromPaths Should create a route tree, with top level route having params 1`] = `
Array [
  Object {
    "component": null,
    "path": "/tag/:action/:tagid?",
  },
  Object {
    "component": null,
    "path": "/beat",
    "routes": Array [
      Object {
        "component": null,
        "path": "/beat/detail",
      },
      Object {
        "component": null,
        "path": "/beat/tags",
      },
    ],
  },
  Object {
    "component": null,
    "path": "/error/enforce_security",
  },
  Object {
    "component": null,
    "path": "/error/invalid_license",
  },
  Object {
    "component": null,
    "path": "/error/no_access",
  },
  Object {
    "component": null,
    "path": "/overview",
    "routes": Array [
      Object {
        "component": null,
        "path": "/overview/enrolled_beats",
      },
      Object {
        "component": null,
        "path": "/overview/tag_configurations",
      },
    ],
  },
  Object {
    "component": null,
    "path": "/walkthrough/initial",
    "routes": Array [
      Object {
        "component": null,
        "path": "/walkthrough/initial/beat",
      },
      Object {
        "component": null,
        "path": "/walkthrough/initial/finish",
      },
      Object {
        "component": null,
        "path": "/walkthrough/initial/tag",
      },
    ],
  },
  Object {
    "component": null,
    "path": "*",
  },
]
`;
